Add start script

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "yelp-camp",
   "version": "1.0.0",
-  "description": "",
+  "description": "A Yelp clone, for campsite reviews and comments",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
